--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "nuxt": "^3.4.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.9",
+    "nuxt-snackbar": "^1.0.3",
+    "pinia": "^2.0.35"
   }
 }
